--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cool-ascii-faces": "^1.3.4",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "html2canvas": "^1.0.0-rc.7",
     "pg": "^8.5.1"
   },
   "devDependencies": {},
