--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "html2canvas": "^1.0.0-rc.7",
+    "moment": "^2.29.3",
     "pg": "^8.5.1"
   },
   "devDependencies": {},
