--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "dvlcube.com hub",
   "main": "index.js",
   "dependencies": {
+    "@ngrok/ngrok": "^1.4.1",
     "cool-ascii-faces": "^1.3.4",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "html2canvas": "^1.0.0-rc.7",
+    "insta-fetcher": "^1.3.35",
     "moment": "^2.29.3",
-    "pg": "^8.5.1"
+    "ngrok": "^5.0.0-beta.2",
+    "pg": "^8.5.1",
+    "telegraf": "^4.16.3"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
