--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "cool-ascii-faces": "^1.3.4",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.19.0",
     "html2canvas": "^1.0.0-rc.7",
     "insta-fetcher": "^1.3.35",
     "moment": "^2.29.3",
     "ngrok": "^5.0.0-beta.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.5.1",
     "telegraf": "^4.16.3"
   },
