--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html2canvas": "^1.0.0-rc.7",
     "insta-fetcher": "^1.3.35",
     "moment": "^2.29.3",
+    "multer": "^1.4.5-lts.1",
     "ngrok": "^5.0.0-beta.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
